# rust-playground

./: .gitignore  .ignore  README.md
axum-intermidiate/: Cargo.toml
axum-intermidiate/src/: error.rs  main.rs
axum-intermidiate/src/ctx/: error.rs  mod.rs
axum-intermidiate/src/log/: mod.rs
axum-intermidiate/src/model/: error.rs  mod.rs
axum-intermidiate/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
axum-intermidiate/web-folder/: index.html
axum-overview/: Cargo.toml  readme.md
axum-overview/examples/: quick_dev.rs  routing.rs
axum-overview/src/: ctx.rs  error.rs  log.rs  main.rs
axum-overview/src/model/: mod.rs
axum-overview/src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
basics/03_programming_concepts/loops/src/: main.rs
basics/08_vectors_hashmaps_strings/excercizes/employee-retriver/: Cargo.toml
basics/08_vectors_hashmaps_strings/strings/src/: main.rs
basics/11_memory-management/: Cargo.toml
basics/12_cmd_line/minigrep/: poem.txt
basics/12_cmd_line/minigrep/src/: lib.rs  main.rs
basics/13_iterators_closures/iterators/src/: lib.rs
basics/14_cargo_crateio/cargo_features/: Cargo.toml
basics/14_cargo_crateio/cargo_features/src/: lib.rs
basics/15_smart_pointers/sp_refcell/src/: lib.rs
basics/16_cconcurrency/mutex/: Cargo.toml
basics/16_cconcurrency/mutex/src/: lib.rs
basics/16_packages/: Cargo.toml
basics/16_packages/src/: main.rs
basics/16_packages/src/garden/: mod.rs
basics/17_oop/design_patterns/src/: main.rs
basics/17_restaurant/src/: lib.rs
basics/18_vectors/src/: main.rs
basics/19_advance_features/associated_types/: Cargo.toml
basics/19_advance_features/associated_types/src/: lib.rs  main.rs
basics/19_advance_features/extern_code/: Cargo.toml  mylib.c  mylib.h
basics/19_advance_features/extern_code/src/: main.rs
basics/19_advance_features/raw_pointers/: Cargo.toml
basics/19_advance_features/raw_pointers/src/: main.rs
basics/19_advance_features/static_var/src/: main.rs
basics/19_strings/src/: main.rs
basics/20_hash_maps/src/: main.rs
basics/20_web_server/server/: hello.html
basics/21_excercizes/piglatin/: Cargo.toml
basics/21_refresher/refresher/: Cargo.toml
basics/22_errors/src/: main.rs
basics/ch_03/tempconv/: Cargo.toml
basics/ch_05/rectangles_can_hold/: Cargo.toml
basics/ch_08/vectors/src/: main.rs
basics/ch_12/minigrep/: output.txt
basics/ch_14/workspaces/: Cargo.toml
basics/ch_15/sp_box/: Cargo.toml
basics/ch_15/sp_refcell/: Cargo.toml
basics/ch_15_smart_pointers/sp_rc/: Cargo.toml
basics/ch_17_oop/design_patterns/: Cargo.toml
basics/ch_17_oop/encapsulation/: Cargo.toml
basics/ch_17_oop/inheritance/: Cargo.toml
basics/ch_19_advance_features/extern_code/: build.rs
basics/ch_19_advance_features/static_var/: Cargo.toml
basics/ch_20_web_server/server/: 404.html
branches/src/: main.rs
cms_testing/: Cargo.toml
cms_testing/database/: Cargo.toml
cms_testing/database/src/: connection.rs  error.rs  lib.rs  metadata.rs
cms_testing/server/: Cargo.toml
cms_testing/server/src/: main.rs
cms_testing/ui/: Cargo.toml
dioxus-server/: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js
dioxus-server/assests/: tailwind.css
dioxus-server/src/: main.rs
dioxus-server/src/components/: echo.rs  mod.rs  navbar.rs  page_not_found.rs
dioxus-server/src/layouts/: mod.rs  product_layout.rs
dioxus-server/src/views/: blog.rs  contact.rs  mod.rs  product_item.rs  product_list.rs  product_specs.rs
dioxus-test/: Cargo.toml  Dioxus.toml  README.md
dioxus-test/assets/: main.css
dioxus-test/src/: main.rs
dioxus-test/src/dog_app/: mod.rs
dioxus-test/src/testinggrounds/: mod.rs
enums/src/: main.rs
guessing_game/src/: main.rs
leptos-tutorial/: Cargo.toml  index.html
leptos-tutorial/src/: main.rs
leptos-tutorial/src/components/: basics.rs  forms.rs  lists.rs  mod.rs  props.rs
matching/src/: main.rs
memory-management/src/: main.rs
nthfibo/: Cargo.toml
nthfibo/src/: main.rs
projects/text-editor/: Cargo.toml
projects/text-editor/src/: editor.rs  main.rs
projects/text-editor/tests/: graphemes.md  graphemes3.txt
rectangles/src/: main.rs
rectangles_can_hold/src/: main.rs
rusty-ui/: Cargo.toml  flake.nix  package-lock.json
rusty-ui/public/: output.css
rusty-ui/src/: main.rs
rusty-ui/src/templates/: mod.rs
rusty-ui/templates/: first.jinja2  layout.jinja2
rusty-ui/templates/components/: button.jinja2  link.jinja2  load_polling.jinja2
rusty-ui/templates/pages/: home.jinja2
sqlx-testing/: Cargo.toml  database.db  first.db  master.db
sqlx-testing/examples/: query_dynamic_db.rs
sqlx-testing/src/: main.rs
structs/src/: main.rs
tempconv/: Cargo.toml
the-twelve-days-of-christmas/: Cargo.toml
tokio-redis/: Cargo.toml
tokio-redis/examples/: join_handle.rs
tokio-redis/src/: lib.rs  main.rs
tokio-testing/: Cargo.toml  data.csv
tokio-testing/src/: main.rs
variables/src/: main.rs
wasm/01_test-wasm/: Cargo.toml  LICENSE_MIT
wasm/02_test-wasm-2/: Cargo.toml  index.html
wasm/02_test-wasm-2/src/: lib.rs
wasm/wasm-testing/: Cargo.toml  index.html
wasm/wasm-testing/src/: lib.rs
(+60 files in other folders)
