[package]
name = "axum-intermidiate"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Oliviero Taleghani <o.taleghani@talesign.com>"]
description = "AwesomeApp rust-web-app."


[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = { version = "0.8.1", features = [ "macros" ] }
tower-http = { version = "0.6.2", features = [ "fs" ] }
tower-cookies = "0.11.0"
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
lazy-regex = "3"
# async-trait = "0.1"
strum_macros = "0.25"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
