[package]
name = "axum-overview"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.2", features = ["fs"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
