[package]
name = "axum-overview"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-cookies = "0.11.0"
lazy-regex = "2"
# async-trait = "0.1"
strum_macros = "0.24"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
