[package]
name = "rusty-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-cookies = "0.11.0"
uuid = { version = "1", features = ["v4", "fast-rng"] }
minijinja = { version = "2.6.0", features = ["loader"]}
rust-embed = "8.2.0"
