[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
auth     = { path = "../auth" }
ui       = { path = "../ui" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-cookies = "0.11.0"
